// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c7[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-left: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialStepIndex 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c7[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-right: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Deuxieme Etape 
        <button>
          Submit
        </button>
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
        type="button"
      >
        Précédent
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c7[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-left: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          3
        </span>
        Name
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should inject rules component 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c7[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-left: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <p>
      Rule
    </p>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Suivant 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c7[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-right: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Deuxieme Etape 
        <button>
          Submit
        </button>
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
        type="button"
      >
        Précédent
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
.c7 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c7[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom: 1px solid #adb9c9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  margin-left: auto;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  margin: 2rem 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c6"
    >
      <button
        class="c7 c8"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;
